--- a/LocationApp/app/src/main/AndroidManifest.xml
+++ b/LocationApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 인터넷 접속 관련 허가 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- 대략적인 위치 감지 가능 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <!-- 매우 정확한 위치 정보를 얻음 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
