--- a/MyWishListApp/gradle/libs.versions.toml
+++ b/MyWishListApp/gradle/libs.versions.toml
@@ -1,15 +1,16 @@
 [versions]
-agp = "9.0.0"
+agp = "8.9.1"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.3"
-kotlin = "2.3.10"
-composeBom = "2026.01.01"
+kotlin = "2.0.21"
+composeBom = "2024.12.01"
 room = "2.8.4"
 navigation = "2.9.7"
+ksp = "2.0.21-1.0.25"
 
 [libraries]
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
@@ -36,3 +37,5 @@ androidx-compose-material3 = { group = "androidx.compose.material3", name = "mat
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
